@startuml

skinparam backgroundColor #c0c0c0

class Thing {
        string name
        string description
        attrib[] attributes
}

class Container {
        map<string, thing> contents
}

class Room {
        bool visited
        map<string, link*> exits
}

Thing <|-- Container
Thing *-- Container
Container <|-- Room
Room *-- Room_link

class World {
        map<string, Room*> rooms

}

World *-- Room

class Room_link {
        Room* destination
        Door* door
}

@enduml
